--- a/project/app/assets/stylesheets/frontend.scss
+++ b/project/app/assets/stylesheets/frontend.scss
@@ -57,14 +57,53 @@
     }
 }
 
-.nav-tabs > li {
-	.active > a {
-		background: #F7F7F7;
-	}	
+.nav-tabs {
+	margin-bottom:20px;
+
+	& > li {
+		.active > a {
+			background: #F7F7F7;
+		}	
+	}
 }
 
 .navbar-default {
   border: none;
+}
+
+.icon-head {
+    min-height: 18px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    padding-left: 22px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.btn-default {
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
 }
 
 /* logo */
@@ -767,6 +806,102 @@ p.muted {
 		}	
 	}
 }
+
+.errors {
+	li {
+		list-style-type: none;
+	}
+}
+
+.category-panel	{
+	/*padding: 45px 15px 15px;*/
+	border-top: none;	
+	border-bottom: none;	
+	border-right: none;	
+	border-radius: 0px;
+	border-width: 2px;
+	box-shadow: none;
+	padding-left: 10px;
+
+	&>.panel-heading {
+		background-color: #fff;
+		border-bottom: 4px solid #dfdfdf;
+		margin-bottom: 18px;		
+		padding-bottom: .25em;		
+	}
+
+	&>.panel-body, &>.panel-heading{
+		padding-left:0;
+	}
+
+	.tab-panel {
+		@extend .panel;
+		/*border-color: #ddd;*/
+	}
+}
+
+.easytree-container {
+	border: none !important;	
+}
+
+.head-categories {
+    background-image: url(../images/fam_folder_database.gif);
+    padding-left: 20px;
+    color: #253033 !important;
+}
+
+.button-panel {
+	margin-top:10px;
+	margin-bottom:10px;
+
+	button {
+		margin-bottom:5px;
+	}
+}
+
+.category-tree-sidebar {
+	.btn {
+	    text-transform: none;
+	}
+}
+
+.add-category-btn, 
+.add-sub-category-btn {
+	color: $state-success-text;
+}
+
+.delete-active-category-btn {
+	color: $state-danger-text;
+}
+
+
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+/* Small devices (tablets, 768px and up) */
+@media (max-width: $screen-extrasmall-size) {
+	.col-sm-3 .row {
+		background: $gray-lighter;
+		margin-left: inherit;
+		margin-right: inherit;
+		padding: 10px;
+	}
+}
+
+.display-status {
+	display:block;	
+	padding-right: 15px;
+	cursor: pointer;
+
+	.glyphicon-eye-open {
+		color: $brand-success; 
+	}
+
+	.glyphicon-eye-close {
+		color: $brand-danger;
+	}
+
+}
+
 /*******************************************
 * End of forms
 */
