--- a/project/app/assets/stylesheets/base.scss
+++ b/project/app/assets/stylesheets/base.scss
@@ -1,90 +1,88 @@
 @import "variables";
-
 // Import bootstrap
 @import "../../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
-
 // Import font awesome
 @import "../../../bower_components/fontawesome/scss/font-awesome";
-
 @font-face {
-	font-family: "Pacifico";
+    font-family: "Pacifico";
     src: url("../fonts/Pacifico.ttf?v=1.4.0");
 }
 
 div {
-	outline: 0px !important;
-	-webkit-appearance: none;
+    outline: 0px !important;
+    -webkit-appearance: none;
 }
 
 a {
-	color: #333333;
-
-	&.link-info {
-		color: #65A020;
-	}
-
-	&.underline {
-		text-decoration: underline;
-	}
-
-	&:hover, &:focus {
-		color: #333333;
-  		text-decoration: underline;	
-	}
-
+    color: #333333;
+    &.link-info {
+        color: #65A020;
+    }
+    &.underline {
+        text-decoration: underline;
+    }
+    &:hover,
+    &:focus {
+        color: #333333;
+        text-decoration: underline;
+    }
 }
 
 a:focus {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+    outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	text-align: left;
-	font-family: 'Varela Round', sans-serif;
-	font-weight: 400;
-	color: #000;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    text-align: left;
+    font-family: 'Varela Round', sans-serif;
+    font-weight: 400;
+    color: #000;
 }
 
 h1 {
-	font-size: 24px;
-	line-height: 20px;
-	margin-top: 10px;
+    font-size: 24px;
+    line-height: 20px;
+    margin-top: 10px;
 }
 
 h2 {
-	font-size: 20px;
-	line-height: 18px;
-	margin-top: 20px;
-	margin-bottom: 20px;
+    font-size: 20px;
+    line-height: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 h3 {
-	font-size: 16px;
-	line-height: 20px;
+    font-size: 16px;
+    line-height: 20px;
 }
 
 .panel {
-	h3 {
-		margin: 0;
-	}	
+    h3 {
+        margin: 0;
+    }
 }
 
 .container {
-  max-width: 997px !important;
+    max-width: 997px !important;
 }
 
 .btn {
-	cursor: pointer;
-	padding: 10px 18px;
+    cursor: pointer;
+    padding: 10px 18px;
 }
 
-
 .btn-default {
-	background-image: -webkit-linear-gradient(top, #e6e6e6 0%, #cccccc 100%);
-	background-image: linear-gradient(to bottom, #e6e6e6 0%, #cccccc 100%);
-	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe6e6e6', endColorstr='#ffcccccc', GradientType=0);
-	border-color: #c7c7c7;
+    background-image: -webkit-linear-gradient(top, #e6e6e6 0%, #cccccc 100%);
+    background-image: linear-gradient(to bottom, #e6e6e6 0%, #cccccc 100%);
+    background-repeat: repeat-x;
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffe6e6e6', endColorstr='#ffcccccc', GradientType=0);
+    border-color: #c7c7c7;
 }
